# dev-blog

./: Gemfile  _config-deploy.yml  _config.yml  about.markdown  feed.xml  index.html  index.markdown
_drafts/: .on-functional-programming.md.swp  on-functional-programming.md
_includes/: footer.html  head.html
_layouts/: home.html  post.html
_posts/: 2024-01-04-welcome-to-jekyll.markdown
about/: index.html
assets/css/: style.css.map
code/: performance.md  program  program-imp  puretest.rs  qsort  qsort.hi  qsort.hs  sieve  sieve.cmi  sieve.cmx  sieve.ml  test-imperative.cmi  test-imperative.cmx  test-imperative.hi  test-imperative.hs  test-imperative.ml  test.cmi  test.cmx  test.hi  test.hs  test.ml  test.rs
code/domainslibtest/: dune-project
code/domainslibtest-imp/_build/: .db  .digest-db  log
code/domainslibtest-imp/_build/default/: domainslibtest.dune-package  (+1 more)
code/domainslibtest/_build/: .db  .digest-db  log
code/domainslibtest/_build/default/.dune/: configurator
code/domainslibtest/_build/default/lib/: domainslibtest.cmxa
code/domainslibtest/_build/default/lib/.domainslibtest.objs/byte/: domainslibtest.cmi  domainslibtest.cmo  domainslibtest.cmt
code/domainslibtest/_build/default/lib/.merlin-conf/: lib-domainslibtest
code/domainslibtest/_build/default/test/.merlin-conf/: exe-test_domainslibtest
code/domainslibtest/_build/default/test/.test_domainslibtest.eobjs/byte/: dune__exe__Test_domainslibtest.cmti
code/domainslibtest/lib/: dune
code/domainslibtest/test/: dune
code/rayontest/: Cargo.toml
code/rayontest/src/: main.rs
(+9 files in other folders)
